# CYA

./: README.md  p08_GramaticasFormaNormalChomsky.tar
P2_CadenasLenguajes/: CMakeLists.txt  alphabet.cpp  alphabet.h  chain.cpp  chain.h  main.cpp  makefile  symbol.cpp  symbol.h
p06_automata_simulator/: NFA.cc  NFA.h  alphabet.cc  alphabet.h  cadena.cc  cadena.h  file_tool.h  file_tools.cc  input.fa  input.txt  input2.fa  main.cc  makefile  p06_automata_simulator  state.cc  state.h  symbol.cc  symbol.h  transition.cc  transition.h
p08-grammarcnf_javi/p08-grammarcnf/: Grammar2CNF  Makefile  alphabet.cc  alphabet.h  file_tools.cc  grammar.cc  grammar.h  main_p08grammar.cc  main_tools.cc  modiIN.gra  symbol.cc  symbol.h
p08-grammarcnf_javi/p08-grammarcnf/inputs/: in2.gra  in3.gra  in4.gra  in5.gra
p08-grammarcnf_javi/p08-grammarcnf/nousado/: automata.h  sequence.cc  state.h  transition.h
p08-grammarcnf_marga/p08-grammarcnf/: Grammar2CNF  alphabet.cc  alphabet.h  file_tools.cc  grammar.cc  grammar.h  in1.gra  main_p08grammar.cc  modiIN.gr  out.gr  output.gra  symbol.cc  symbol.h
p08-grammarcnf_marga/p08-grammarcnf/inputs/: in1.gra  in6.gra
p08-grammarcnf_marga/p08-grammarcnf/nousado/: automata.cc  sequence.h  state.cc  transition.cc
p08_GramaticasFormaNormalChomsky/: Makefile  alphabet.cc  alphabet.h  file_tool.cc  file_tools.cc  file_tools.h  grammar.cc  grammar.h  main.cc  symbol.cc  symbol.h
p11_AlgoritmosVoraces/: kruscal.cc  kruscal.h  main.cc  point_types.cc  point_types.h  sub_tree.cc  sub_tree.h
p11_AlgoritmosVoraces/practica_marga/: a.out  emst.cc  emst.h  input.txt  main.cc  output1.txt  salida.dot
p12_DivideVenceras/: hull_output.dot  input.txt  main.cc  point_set.cc  point_set.h  prueba
(+1 files in other folders)
